--- a/src/main/webapp/admin.html
+++ b/src/main/webapp/admin.html
@@ -62,7 +62,7 @@
                                                                     placeholder="Password"  style="margin: 6px;">
                                 <input id="email" type="email"
                                        placeholder="Email" style="margin: 6px;">
-                                <button onclick=searchupdate() class="btn btn-primary"
+                                <button onclick=addAccount() class="btn btn-primary"
                                         type="button" style="margin-left: 6px;">Add</button>
                                 <div class="btn-group ml-auto" role="group">
                                     <button onclick=logout() class="btn btn-primary ml-auto" type="button"
@@ -172,7 +172,7 @@
 			}
 			requestContent();
         }
-    }
+    };
 
 
     function updatelist() {
@@ -193,29 +193,29 @@
 	}
 
     function updateOVAccount(){
-    	var body = document.getElement
-    	ById('OVAccountList');
-		body.innerHTML = "";
+        var body = document.getElementById('OVAccountList');
+        body.innerHTML = "";
 
-		for (var i = 0; i < ovacc.length; i++) {
+        for (var i = 0; i < ovacc.length; i++) {
 
-			var ver = document.createElement("tr");
+            var ver = document.createElement("tr");
 
-			// create user display
-			var user = document.createElement("td");
-			var utxt = document.createTextNode(ovacc[i].username);
-			user.appendChild(utxt);
-			ver.appendChild(user);
+            // create user display
+            var user = document.createElement("td");
+            var utxt = document.createTextNode(ovacc[i].username);
+            user.appendChild(utxt);
+            ver.appendChild(user);
 
-			// create pass display
-			var pass = document.createElement("td");
-			var ptxt = document.createTextNode(ovacc[i].password);
-			pass.appendChild(ptxt);
-			ver.appendChild(pass);
+            // create pass display
+            var pass = document.createElement("td");
+            var ptxt = document.createTextNode(ovacc[i].password);
+            pass.appendChild(ptxt);
+            ver.appendChild(pass);
 
-			body.appendChild(ver);
-		}
+            body.appendChild(ver);
+        }
     }
+
 
     function updateGoogleAccount() {
         var body = document.getElementById('GoogleAccountList');
@@ -234,6 +234,16 @@
         }
     }
 
+    function addAccount(){
+        if($("#googleSelector").prop("checked", true)){
+            $.post({
+                url: "./OV/admin/googleUser",
+                contentType: 'application/json; charset=utf-8',
+                dataType: 'json'
+            });
+            $("#email").val()
+        }
+    }
 
     $("#menu-toggle").click(function(e) {
         e.preventDefault();
@@ -261,6 +271,8 @@
 	function deleteUser(){
 
 	}
+
+
 
 
     function requestContent() {
