--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -403,6 +403,8 @@
 
 
 			body.appendChild(ver);
+			
+			editIcon.click();
 		}
 
 		// function when save button pressed
@@ -564,8 +566,6 @@
 				row[l].children[3].children[0].setAttribute('onclick', "edit(" + l + ")");
 				row[l].children[4].children[0].setAttribute('onclick', "deletePayrate(" + l + ")");
 			} 
-			
-			
 		}
 
 		$("#menu-toggle").click(function(e) {
