--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -114,8 +114,8 @@
 									<table class="table">
 										<thead>
 											<tr>
-												<td>Employee Number</td>
-												<td>Full Name</td>
+												<td onclick = sort(0)>Employee Number</td>
+                                    			<td onclick = sort(1)>Full Name</td>
 												<td>Status</td>
 											</tr>
 										</thead>
@@ -172,6 +172,7 @@
 															</tr>
 														</tbody>
 													</table>
+													<label for = "label" class = "text-center" id="warning" style="color: red;"></label>
 												</div>
 											</div>
 											<div class="modal-footer">
@@ -211,6 +212,8 @@
 		var elem1;
 		var elem2;
 		var elem3;
+		var ascNum = false;
+		var ascName = false;
 		var rowNum = -1;
 		var xhr = new XMLHttpRequest();
 		var rqueue = [ "./OV/test", "./OV/main/employees",
@@ -339,6 +342,7 @@
 				ver.appendChild(trash);
 
 				body.appendChild(ver);
+				$("#warning").text(null);
 
 			}
 		}
@@ -428,14 +432,38 @@
 				+ inf[2] + "\n";
 				
 			}
-			console.log(out);
-			xhr.open("POST", "./OV/main/editPayrates/");
-			xhr.setRequestHeader('Accept', 'text/plain');
-			xhr.setRequestHeader("Content-type", "text/plain");
-			xhr.send(out);
-			setTimeout(function() {
-				getId(crdnr, infoname)
-			}, 200);
+			$.post({
+				url : "./OV/main/editPayrates/",
+				beforeSend: function(xhr) {
+					xhr.setRequestHeader('Accept', 'text/plain');
+					xhr.setRequestHeader("Content-type", "text/plain");
+			    },
+			    data : out,
+				success : function(response) {
+					if (response == 1) {
+						setTimeout(function(){getId(crdnr, infoname)}, 200);
+					} else {
+						$("#warning").text("Entered dates are invalid, please check and try again with valid dates.");
+					}
+				}
+			})
+		}
+		
+		function sort(n) {
+			if(n == 0 && ascNum == false) {
+				xhr.open("GET", "./OV/main/sort/00");
+				ascNum = true;
+			} else if(n == 0 && ascNum == true) {
+				xhr.open("GET", "./OV/main/sort/01");
+				ascNum = false;
+			} else if(n == 1 && ascName == false) {
+				xhr.open("GET", "./OV/main/sort/10");
+				ascName = true;
+			} else if(n == 1 && ascName == true) {
+				xhr.open("GET", "./OV/main/sort/11");
+				ascName = false;
+			}
+			xhr.send();
 		}
 
 		function logout() {
