SPECIFIED THE ERRORS

--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -93,7 +93,7 @@
 												onclick="openFileDialog();"
 												style="margin: 6px; border-radius: 6px;">Import</button>
 											<input type="file" id="fileLoader"
-												onchange="this.form.submit()" name="files" title="Load File" />
+												onchange="submitfile()" name="files" title="Load File" />
 										</form>
 										<button class="btn btn-primary" type="button"
 											onclick="location.href='./OV/main/export.csv'"
@@ -257,12 +257,20 @@
 						}
 					}
 				} catch (e) {
-					console.log("caught exception : " + e);
+					showImportStatus(this.responseText);
 				}
+				
 				requestContent();
 			}
 		}
 
+		function submitfile() {
+			let formData = new FormData();
+			formData.append("files", document.getElementById("fileLoader").files[0]);
+			xhr.open("POST", "./OV/main/import");
+			xhr.send(formData);
+		}
+		
 		function addDropdown() {
 			dropdown = document.getElementById("officeDropdown")
 			dropdown.innerHTML = "";
@@ -463,7 +471,7 @@
 					if (response == 1) {
 						setTimeout(function(){getId(crdnr, infoname)}, 200);
 					} else {
-						$("#payratestatus").html("<label for = 'label' class = 'text-center' id='warning' style='color: red;'>Entered dates are invalid, please check and try again with valid dates.</label>");
+						$("#payratestatus").html("<label for = 'label' class = 'text-center' id='warning' style='color: red;'>" + response + "</label>");
 					}
 				}
 			})
